tests/paczka1/fuzzy1/60091978.err
Error in line 6: uuD8jadu S454 37,46
Error in line 1: k6lT0T A782 44,1
Error in line 13: 2YRN27S A782 74,2
Error in line 11: A782 A789 4,7
Error in line 9: uuD8jadu S454 99,3
Error in line 31: k6lT0T A782 272,4
Error in line 29: IEWa A437 57,8
Error in line 32: uuD8jadu A782 68,1
